--- a/LibraryProof/app/src/main/AndroidManifest.xml
+++ b/LibraryProof/app/src/main/AndroidManifest.xml
@@ -6,10 +6,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,18 +19,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.AuthorListActivity"
-            android:label="@string/title_activity_author" >
+            android:name=".activities.authors.AuthorListActivity"
+            android:label="@string/title_activity_author"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
         <activity
-            android:name=".activities.AuthorFormActivity"
-            android:label="@string/title_activity_author_form" >
+            android:name=".activities.authors.AuthorFormActivity"
+            android:label="@string/title_activity_author_form_create"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.AuthorListActivity" />
+                android:value=".activities.authors.AuthorListActivity" />
         </activity>
     </application>
 
