--- a/LibraryProof/build.gradle
+++ b/LibraryProof/build.gradle
@@ -1,14 +1,9 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -17,3 +12,45 @@ allprojects {
         jcenter()
     }
 }
+
+apply plugin: 'com.android.application'
+
+android {
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
+
+    defaultConfig {
+        applicationId "io.androoid.libraryproof"
+        minSdkVersion 21
+        targetSdkVersion 21
+        versionCode 1
+        versionName "1.0"
+    }
+
+
+    signingConfigs {
+        releaseSigning {
+            storeFile file(System.getenv("ANDROID_KEYSTORE"))
+            storePassword System.console().readLine("\nStore password: ")
+            keyAlias System.getenv("ANDROID_KEYALIAS")
+            keyPassword System.console().readLine("Key password: ")
+        }
+    }
+
+    buildTypes {
+        release {
+            signingConfig signingConfigs.releaseSigning
+        }
+    }
+
+}
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+}
+
+
+
