--- a/LibraryProof/build.gradle
+++ b/LibraryProof/build.gradle
@@ -31,9 +31,9 @@ android {
     signingConfigs {
         releaseSigning {
             storeFile file(System.getenv("ANDROID_KEYSTORE"))
-            storePassword System.console().readLine("\nStore password: ")
+            //storePassword System.console().readLine("\nStore password: ")
             keyAlias System.getenv("ANDROID_KEYALIAS")
-            keyPassword System.console().readLine("Key password: ")
+            //keyPassword System.console().readLine("Key password: ")
         }
     }
 
