--- a/LibraryProof/src/main/AndroidManifest.xml
+++ b/LibraryProof/src/main/AndroidManifest.xml
@@ -45,6 +45,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
+        <activity
+            android:name=".activities.books.BookFormActivity"
+            android:label="@string/title_activity_book_form_create"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.books.BookListActivity" />
+        </activity>
     </application>
 
 </manifest>
