--- a/LibraryProof/build.gradle
+++ b/LibraryProof/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'org.osmdroid:osmdroid-android:4.3'
+    compile 'org.slf4j:slf4j-simple:1.6.1'
+    compile 'fr.dudie:nominatim-api:3.0.1'
 }
 
 
