--- a/LibraryProof/src/main/AndroidManifest.xml
+++ b/LibraryProof/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <!--Activities -->
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
@@ -54,6 +57,32 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.books.BookListActivity" />
         </activity>
+        <activity
+            android:name=".activities.libraries.LibraryListActivity"
+            android:label="@string/title_activity_library"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
+        <activity
+            android:name=".activities.libraries.LibraryFormActivity"
+            android:label="@string/title_activity_library_form_create"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.libraries.LibraryListActivity" />
+        </activity>
     </application>
 
+    <!-- Permissions -->
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
